tests/fixtures/invalid/pow_none_bool_bool.py
# Cannot call pow() with None, Bool, Bool
x = pow(None, True, True)
